fix: buttons in download image are too big for some mobile

--- a/simulator/src/css/main.stylesheet.css
+++ b/simulator/src/css/main.stylesheet.css
@@ -2787,7 +2787,7 @@ canvas {
     }
     .download-dialog-section-2 {
         background: transparent;
-        width: 80%;
+        width: 90%;
         display: inline-flex;
         justify-content: space-around;
     }
